--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Indelible';
-  src: url('/Indelible.woff') format('woff');
+  src: url('/indelible-webfont.woff2') format('woff2'),
+       url('/indelible-webfont.woff') format('woff');
   font-weight: normal;
   font-style: italic;
 }
