--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   src: url('/indelible-webfont.woff2') format('woff2'),
        url('/indelible-webfont.woff') format('woff');
   font-weight: normal;
-  font-style: italic;
+  font-style: normal;
 }
 
 @font-face {
