dark purple bg color

--- a/src/index.css
+++ b/src/index.css
@@ -23,7 +23,7 @@ body {
   background-attachment: fixed;
   background-size: cover;
   background-position: center center;
-  background-color: #614051;
+  background-color: #261e35;
   font-family: 'VCR';
   color: white;
   text-shadow: -1px 1px 0 black,
